--- a/Analysis/Young_Model_Exploration.Rmd
+++ b/Analysis/Young_Model_Exploration.Rmd
@@ -82,11 +82,11 @@ plot1DF <- plotDF %>%
 
 
 plot4_1 <-ggplot(plot1DF, aes(x = population, y = occupiedWorld)) +
-  geom_point(alpha = 1, size=0.01) +
+  geom_jitter(alpha = 1, size=0.01, height=0.01, width=10000) +
   theme(axis.text=element_text(size=4)) +
   theme(axis.title=element_text(size=5))+
   scale_x_continuous(name = "Taille de la population") +
-  scale_y_continuous(name = "Part de l'espace occupé") +
+  scale_y_continuous(name = "Part de l'espace occupé",  labels = scales::percent) +
   facet_grid(`Proba. de déplacement`~`Proba. de mort`,
              labeller = labeller(.rows = label_both, .cols = label_both)) +
   theme(strip.text = element_text(size = 4)) +
@@ -143,9 +143,8 @@ plot4_2 <- ggplot() +
              colour = "black", fontface = "bold", size=3,  alpha = 0.6) +
   geom_point(data = fullDF, aes(x = popObj, y = occupiedObj), size = 0.1, alpha = 1) +
   guides(fill = FALSE, label = FALSE) +
-  xlab("Population") +
-  ylab("% space  occupied") +
-  scale_y_continuous(labels = scales::percent) +
+  scale_x_continuous(name = "Taille de la population") +
+  scale_y_continuous(name = "Part de l'espace occupé", labels = scales::percent) +
   theme(strip.text = element_text(size = 4)) +
   theme(axis.text=element_text(size=4)) +
   theme(axis.title=element_text(size=5)) + 
@@ -159,12 +158,17 @@ plot(plot4_2)
 ```{r plot4_3}
 tidyDF <- fullDF %>%
   gather(key = Param, value = Value, probaMove:probaDeathByOvercrowding) %>%
-  mutate(Param = ifelse(Param == "probaDeathByOvercrowding", "probaDeathBy\nOvercrowding", Param))
+  mutate(Param = ifelse(Param == "probaDeathByOvercrowding", "Proba. de mort\npar suffocation", Param)) %>%
+  mutate(Param = ifelse(Param == "probaMove", "Proba. de\ndéplacement", Param)) %>%
+  mutate(Param = ifelse(Param == "probaBirth", "Proba. de\nnaissance", Param)) %>%
+  mutate(Param = ifelse(Param == "probaDeath", "Proba. de\nmort", Param))
 
 plot4_3 <- ggplot(data = tidyDF, aes(cluster, Value,  fill = cluster)) +
   geom_violin(alpha = 0.7) +
   facet_grid(.~Param, scale = "free", space="free") +
   guides(fill=FALSE) +
+  scale_x_discrete(name = "Classe") +
+  scale_y_continuous(name = "Valeur de\nparamètre") +
   theme(strip.text = element_text(size = 4)) +
   theme(axis.text=element_text(size=4)) +
   theme(axis.title=element_text(size=5)) +
